--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1023,6 +1023,51 @@ body {
   }
 }
 
+.c-pagination {
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 320px) {
+  .c-pagination {
+    margin-top: 15px;
+  }
+}
+
+.c-pagination__lists {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.c-pagination__list {
+  padding: 10px;
+  margin: 0 3px;
+  font-size: 14px;
+  color: #222;
+  text-decoration: none;
+  background-color: #fff;
+}
+
+@media screen and (max-width: 414px) {
+  .c-pagination__list {
+    margin: 0 5px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .c-pagination__list {
+    margin: 0 3px;
+  }
+}
+
+.c-pagination__list.is-active {
+  font-weight: bold;
+  color: #fff;
+  background-color: #0081ff;
+}
+
 .c-h1__head {
   border-radius: 2px;
   padding: 15px;
