--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2596,6 +2596,115 @@ body {
   }
 }
 
+.p-profileEdit__body {
+  padding: 50px;
+}
+
+@media screen and (max-width: 414px) {
+  .p-profileEdit__body {
+    padding: 30px 20px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .p-profileEdit__body {
+    padding: 20px 10px;
+  }
+}
+
+.p-profileEdit__img {
+  width: 130px;
+  height: 130px;
+  padding: 0 3px;
+  margin-top: 2px;
+}
+
+@media screen and (max-width: 320px) {
+  .p-profileEdit__img {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+.p-profileEdit__wrap {
+  display: flex;
+  padding: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .p-profileEdit__wrap {
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+}
+
+.p-profileEdit__label {
+  display: block;
+  width: 25%;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+  .p-profileEdit__label {
+    width: 100%;
+    margin-bottom: 3px;
+    font-size: 13px;
+  }
+}
+
+.p-profileEdit__label > span {
+  margin-left: 5px;
+  font-size: 12px;
+  color: #dc3545;
+}
+
+.p-profileEdit__inputWrap {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+@media screen and (max-width: 768px) {
+  .p-profileEdit__inputWrap {
+    width: 100%;
+  }
+}
+
+.p-profileEdit__input.-name {
+  width: 70%;
+}
+
+@media screen and (max-width: 768px) {
+  .p-profileEdit__input.-name {
+    width: 100%;
+  }
+}
+
+.p-profileEdit__input.-email {
+  width: 70%;
+}
+
+@media screen and (max-width: 768px) {
+  .p-profileEdit__input.-email {
+    width: 100%;
+  }
+}
+
+.p-profileEdit__textarea {
+  width: 100%;
+}
+
+.p-profileEdit__editBtn {
+  display: block;
+  padding: 10px 40px;
+  margin: 20px auto 0;
+  font-size: 14px;
+  color: #fff;
+  background-color: #0081ff;
+}
+
 .p-side__lists {
   width: 90%;
   padding: 0;
